[package]
name = "libsuzu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.29.0", features = ["serde-serialize"]}
ggez = "0.7.0"

mint = "0.5.8"
toml = "0.5.8"
collision = "0.20.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
cgmath = "0.17.0"
rand = "0.7.2"
num = "*"
number_to_jk = { git = "https://github.com/atsisy/number_to_jk.git", rev = "4ec4ea23f0fd807b97e192f7ce03c94b2d450ef2" }
tiled = "0.9.5"
pathfinding = "2.2.2"
base64 = "0.13.0"
rust-crypto = "0.2.36"
aes-stream = "0.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }	
chrono = "0.4.19"
